Fix #1 : Mise à jour de la page branches.html

--- a/branches.html
+++ b/branches.html
@@ -1,5 +1,6 @@
 <!DOCTYPE html>
 <html lang="fr">
+
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
@@ -9,11 +10,13 @@
     <!-- Votre CSS personnalisé -->
     <link rel="stylesheet" href="git.css">
 </head>
+
 <body>
     <nav class="navbar navbar-expand-lg navbar-dark bg-primary">
         <div class="container-fluid">
             <a class="navbar-brand" href="index.html"><img src="images/ghlogo.png" alt="Logo Git et Github"></a>
-            <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Basculer la navigation">
+            <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav"
+                aria-controls="navbarNav" aria-expanded="false" aria-label="Basculer la navigation">
                 <span class="navbar-toggler-icon"></span>
             </button>
             <div class="collapse navbar-collapse" id="navbarNav">
@@ -25,7 +28,8 @@
                         <a class="nav-link" href="glossary.html">Glossaire</a>
                     </li>
                     <li class="nav-item dropdown">
-                        <a class="nav-link dropdown-toggle" href="#" id="navbarDropdownMenuLink" role="button" data-bs-toggle="dropdown" aria-expanded="false">
+                        <a class="nav-link dropdown-toggle" href="#" id="navbarDropdownMenuLink" role="button"
+                            data-bs-toggle="dropdown" aria-expanded="false">
                             Sections
                         </a>
                         <ul class="dropdown-menu" aria-labelledby="navbarDropdownMenuLink">
@@ -40,33 +44,38 @@
         </div>
     </nav>
 
-    <div class="container mt-4">
-        <h1 class="mb-4">Gestion des Branches Git</h1>
-        <p class="lead">Explorez les commandes essentielles pour la gestion des branches dans vos projets Git.</p>
-        <div class="row">
-            <div class="col-md-6">
-                <h5>Commandes de Base</h5>
-                <p>Liste des branches locales et commandes pour la gestion des branches :</p>
-                <div class="mb-3">
-                    <code>git branch</code> - Liste toutes les branches locales.<br>
-                    <code>git branch &lt;nom de la branche&gt;</code> - Crée une nouvelle branche.<br>
-                    <code>git checkout &lt;nom de la branche&gt;</code> - Bascule sur la branche spécifiée.<br>
-                    <code>git merge &lt;nom de la branche&gt;</code> - Fusionne la branche spécifiée avec la branche courante.<br>
+    <div class="container-fluid d-flex align-items-center justify-content-center vh-100">
+        <div class="container">
+            <h1 class="mb-5 text-center">Gestion des Branches Git</h1>
+            <p class="lead mb-5 text-center">Explorez les commandes essentielles pour la gestion des branches dans vos
+                projets Git.</p>
+            <div class="row">
+                <div class="col-md-6 offset-md-1 mb-4 mb-md-0">
+                    <h5>Commandes de Base</h5>
+                    <p>Liste des branches locales et commandes pour la gestion des branches :</p>
+                    <div class="mb-3">
+                        <code>git branch</code> - Liste toutes les branches locales.<br>
+                        <code>git branch &lt;nom de la branche&gt;</code> - Crée une nouvelle branche.<br>
+                        <code>git checkout &lt;nom de la branche&gt;</code> - Bascule sur la branche spécifiée.<br>
+                        <code>git merge &lt;nom de la branche&gt;</code> - Fusionne la branche spécifiée avec la branche
+                        courante.<br>
+                    </div>
                 </div>
-            </div>
-            <div class="col-md-6">
-                <h5>Commandes Avancées</h5>
-                <p>Commandes pour les opérations avancées de branche :</p>
-                <div class="mb-3">
-                    <code>git branch -d &lt;nom de la branche&gt;</code> - Supprime la branche localement.<br>
-                    <code>git push origin --delete &lt;nom de la branche&gt;</code> - Supprime la branche sur le dépôt distant.<br>
+                <div class="col-md-6 offset-md-5 text-end">
+                    <h5>Commandes Avancées</h5>
+                    <p>Commandes pour les opérations avancées de branche :</p>
+                    <div class="mb-3">
+                        <code>git branch -d &lt;nom de la branche&gt;</code> - Supprime la branche localement.<br>
+                        <code>git push origin --delete &lt;nom de la branche&gt;</code> - Supprime la branche sur le
+                        dépôt distant.<br>
+                    </div>
                 </div>
             </div>
         </div>
-    </div>
 
 
-    <!-- Bundle JS de Bootstrap avec Popper -->
-    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.0-beta1/dist/js/bootstrap.bundle.min.js"></script>
+        <!-- Bundle JS de Bootstrap avec Popper -->
+        <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.0-beta1/dist/js/bootstrap.bundle.min.js"></script>
 </body>
+
 </html>
