images/ chemin modif

--- a/index.html
+++ b/index.html
@@ -54,7 +54,7 @@
 
             <div class="carousel-inner">
                 <div class="carousel-item active">
-                    <img src="/images/git-logo.png" alt="git.png" width="900" height="400">
+                    <img src="images/git-logo.png" alt="git.png" width="900" height="400">
 
 
                     <div class="container">
@@ -72,7 +72,7 @@
                 </div>
 
                 <div class="carousel-item">
-                    <img src="/images/github.png" alt="github.png" width="900" height="400">
+                    <img src="images/github.png" alt="github.png" width="900" height="400">
 
                     <div class="container">
                         <div class="carousel-caption text-end">
@@ -90,7 +90,7 @@
                     </div>
                 </div>
                 <div class="carousel-item">
-                    <img src="/images/gitlab.png" alt="gitlab.png" width="900" height="400">
+                    <img src="images/gitlab.png" alt="gitlab.png" width="900" height="400">
 
                     <div class="container">
                         <div class="carousel-caption text-start">
@@ -175,7 +175,7 @@
         </div>
         <div class="col-md-5">
           <img class="bd-placeholder-img bd-placeholder-img-lg featurette-image img-fluid mx-auto" width="500"
-            height="500" src="/images/git-logo.png" </div>
+            height="500" src="images/git-logo.png" </div>
         </div>
 
         <hr class="featurette-divider">
@@ -191,7 +191,7 @@
           </div>
           <div class="col-md-5 order-md-1">
             <img class="bd-placeholder-img bd-placeholder-img-lg featurette-image img-fluid mx-auto" width="500"
-              height="500" src="/images/github.png">
+              height="500" src="images/github.png">
 
           </div>
         </div>
@@ -210,7 +210,7 @@
           </div>
           <div class="col-md-5">
             <img class="bd-placeholder-img bd-placeholder-img-lg featurette-image img-fluid mx-auto" width="500"
-              height="500" src="/images/gitlab.png">
+              height="500" src="images/gitlab.png">
           </div>
         </div>
 
