--- a/install.html
+++ b/install.html
@@ -1,5 +1,6 @@
 <!DOCTYPE html>
 <html lang="fr">
+
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
@@ -9,11 +10,13 @@
     <!-- Votre CSS personnalisé -->
     <link rel="stylesheet" href="git.css">
 </head>
+
 <body>
     <nav class="navbar navbar-expand-lg navbar-dark bg-dark">
         <div class="container-fluid">
             <a class="navbar-brand" href="index.html"><img src="images/ghlogo.png" alt="Logo Git et Github"></a>
-            <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Basculer la navigation">
+            <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav"
+                aria-controls="navbarNav" aria-expanded="false" aria-label="Basculer la navigation">
                 <span class="navbar-toggler-icon"></span>
             </button>
             <div class="collapse navbar-collapse" id="navbarNav">
@@ -25,7 +28,8 @@
                         <a class="nav-link" href="glossary.html">Glossaire</a>
                     </li>
                     <li class="nav-item dropdown">
-                        <a class="nav-link dropdown-toggle" href="#" id="navbarDropdownMenuLink" role="button" data-bs-toggle="dropdown" aria-expanded="false">
+                        <a class="nav-link dropdown-toggle" href="#" id="navbarDropdownMenuLink" role="button"
+                            data-bs-toggle="dropdown" aria-expanded="false">
                             Sections
                         </a>
                         <ul class="dropdown-menu" aria-labelledby="navbarDropdownMenuLink">
@@ -40,23 +44,28 @@
         </div>
     </nav>
 
-    <div class="container mt-4">
-        <h1 class="mb-4">Installer Git</h1>
-        <p class="lead">Suivez ces étapes pour installer et configurer Git sur votre système.</p>
-        <div class="mb-3">
-            <h5>Téléchargement de Git</h5>
-            <p>Visitez <a href="https://git-scm.com/downloads" target="_blank" class="link-primary">git-scm.com/downloads</a> et téléchargez la version appropriée pour votre système d'exploitation.</p>
-        </div>
-        <div class="mb-3">
-            <h5>Configuration de Base</h5>
-            <p>Après l'installation, ouvrez votre terminal et configurez votre identité Git avec les commandes suivantes :</p>
-            <code>git config --global user.name "Votre Nom"</code><br>
-            <code>git config --global user.email "votre-email@example.com"</code>
-        </div>
-        <div class="mb-3">
-            <h5>Vérification de la Configuration</h5>
-            <p>Pour vérifier que tout est configuré correctement, tapez :</p>
-            <code>git config --list</code>
+    <div class="container-fluid d-flex align-items-center justify-content-center vh-100">
+        <div class="container text-center">
+            <h1 class="mb-5 text-center">Installer Git</h1>
+            <p class="lead mb-5 text-center">Suivez ces étapes pour installer et configurer Git sur votre système.</p>
+            <div class="mb-3">
+                <h5>Téléchargement de Git</h5>
+                <p>Visitez <a href="https://git-scm.com/downloads" target="_blank"
+                        class="link-primary">git-scm.com/downloads</a> et téléchargez la version appropriée pour votre
+                    système d'exploitation.</p>
+            </div>
+            <div class="mb-3">
+                <h5>Configuration de Base</h5>
+                <p>Après l'installation, ouvrez votre terminal et configurez votre identité Git avec les commandes
+                    suivantes :</p>
+                <code>git config --global user.name "Votre Nom"</code><br>
+                <code>git config --global user.email "votre-email@example.com"</code>
+            </div>
+            <div class="mb-3">
+                <h5>Vérification de la Configuration</h5>
+                <p>Pour vérifier que tout est configuré correctement, tapez :</p>
+                <code>git config --list</code>
+            </div>
         </div>
     </div>
 
@@ -64,4 +73,5 @@
     <!-- Bundle JS de Bootstrap avec Popper -->
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.0-beta1/dist/js/bootstrap.bundle.min.js"></script>
 </body>
+
 </html>
