--- a/remote.html
+++ b/remote.html
@@ -1,5 +1,6 @@
 <!DOCTYPE html>
 <html lang="fr">
+
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
@@ -9,11 +10,13 @@
     <!-- Votre CSS personnalisé -->
     <link rel="stylesheet" href="git.css">
 </head>
+
 <body>
     <nav class="navbar navbar-expand-lg navbar-dark bg-dark">
         <div class="container-fluid">
             <a class="navbar-brand" href="index.html"><img src="images/ghlogo.png" alt="Logo Git et Github"></a>
-            <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Basculer la navigation">
+            <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav"
+                aria-controls="navbarNav" aria-expanded="false" aria-label="Basculer la navigation">
                 <span class="navbar-toggler-icon"></span>
             </button>
             <div class="collapse navbar-collapse" id="navbarNav">
@@ -25,7 +28,8 @@
                         <a class="nav-link" href="glossary.html">Glossaire</a>
                     </li>
                     <li class="nav-item dropdown">
-                        <a class="nav-link dropdown-toggle" href="#" id="navbarDropdownMenuLink" role="button" data-bs-toggle="dropdown" aria-expanded="false">
+                        <a class="nav-link dropdown-toggle" href="#" id="navbarDropdownMenuLink" role="button"
+                            data-bs-toggle="dropdown" aria-expanded="false">
                             Sections
                         </a>
                         <ul class="dropdown-menu" aria-labelledby="navbarDropdownMenuLink">
@@ -40,25 +44,29 @@
         </div>
     </nav>
 
-    <div class="container mt-4">
-        <h1 class="mb-4">Commandes Git Distantes</h1>
-        <p class="lead">Gérez vos dépôts distants avec ces commandes essentielles.</p>
-        <div class="row">
-            <div class="col-md-6">
-                <h5>Ajouter et Gérer les Dépôts Distantes</h5>
-                <p>Voici les commandes pour ajouter, modifier, et supprimer des dépôts distants :</p>
-                <div class="mb-3">
-                    <code>git remote add origin &lt;URL du projet&gt;</code><br>
-                    <code>git remote set-url origin &lt;nouvelle URL&gt;</code><br>
-                    <code>git remote remove origin</code>
+    <div class="container-fluid d-flex align-items-center justify-content-center vh-100">
+        <div class="container">
+            <h1 class="mb-5 text-center ">Commandes Git Distantes</h1>
+            <p class="lead mb-5 text-center">Gérez vos dépôts distants avec ces commandes essentielles.</p>
+            <div class="row">
+                <div class="col-md-6 text-center">
+                    <h5>Ajouter et Gérer les Dépôts Distantes</h5>
+                    <p>Voici les commandes pour ajouter, modifier, et supprimer des dépôts distants :</p>
+                    <div class="mb-3">
+                        <code>git remote add origin &lt;URL du projet&gt;</code><br>
+                        <code>git remote set-url origin &lt;nouvelle URL&gt;</code><br>
+                        <code>git remote remove origin</code>
+                    </div>
                 </div>
-            </div>
-            <div class="col-md-6">
-                <h5>Push et Pull</h5>
-                <p>Envoyez et recevez des changements entre vos dépôts locaux et distants :</p>
-                <div class="mb-3">
-                    <code>git push origin &lt;nom de la branche&gt;</code><br>
-                    <code>git pull origin &lt;nom de la branche&gt;</code>
+
+
+                <div class="col-md-6 border-start text-center">
+                    <h5>Push et Pull</h5>
+                    <p>Envoyez et recevez des changements entre vos dépôts locaux et distants :</p>
+                    <div class="mb-3">
+                        <code>git push origin &lt;nom de la branche&gt;</code><br>
+                        <code>git pull origin &lt;nom de la branche&gt;</code>
+                    </div>
                 </div>
             </div>
         </div>
@@ -68,4 +76,5 @@
     <!-- Bundle JS de Bootstrap avec Popper -->
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.0-beta1/dist/js/bootstrap.bundle.min.js"></script>
 </body>
+
 </html>
