--- a/security.html
+++ b/security.html
@@ -64,7 +64,7 @@
                         <p>Conseils pour améliorer la sécurité de vos projets Git :</p>
                         <ul>
                             <li>Utilisez toujours des communications sécurisées pour interagir avec le serveur distant
-                                (HTTPS, SSH).</li>
+                                (HTTPS, SSH).</li><br>
                             <li>Ne partagez jamais vos clés privées SSH.</li>
                             <li>Mettez régulièrement à jour vos dépendances pour éviter les vulnérabilités.</li>
                         </ul>
