--- a/index.html
+++ b/index.html
@@ -26,6 +26,9 @@
                     <li class="nav-item">
                         <a class="nav-link" href="glossary.html">Glossaire</a>
                     </li>
+                    <li class="nav-item">
+                        <a class="nav-link" href="https://github.com/Whitos/evalgit"  target="_blank">Dépot GitHub</a>
+                    </li>
                     <li class="nav-item dropdown">
                         <a class="nav-link dropdown-toggle" href="#" id="navbarDropdownMenuLink" role="button"
                             data-bs-toggle="dropdown" aria-expanded="false">
@@ -198,7 +201,7 @@
 
         <hr class="featurette-divider">
 
-        
+
         <div class="row featurette">
           <div class="col-md-7">
             <h2 class="featurette-heading fw-normal lh-1">Bootstrap. <span class="text-muted">Framework</span>
