--- a/security.html
+++ b/security.html
@@ -27,6 +27,9 @@
                     <li class="nav-item">
                         <a class="nav-link" href="glossary.html">Glossaire</a>
                     </li>
+                    <li class="nav-item">
+                        <a class="nav-link" href="https://github.com/Whitos/evalgit"  target="_blank">Dépot GitHub</a>
+                    </li>
                     <li class="nav-item dropdown">
                         <a class="nav-link dropdown-toggle" href="#" id="navbarDropdownMenuLink" role="button"
                             data-bs-toggle="dropdown" aria-expanded="false">
